# torre-skill-insights

./: README.md  pyproject.toml  requirements.txt
.github/workflow/: ci.yml
app/: main.py
app/api/: routes.py  user_router.py
app/client/: torre_client.py
app/core/: constants.py  validators.py
app/services/: user_insights_service.py  user_skills_service.py
tests/: conftest.py  test_routes.py  test_torre_client.py  test_user_skills.py
