[project]
name = "torre-skill-insights"
version = "1.0.0"
description = "FastAPI service to obtain user insights from Torre"
authors = [
    { name = "Diego Ramirez Caballero" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.1"
]
license = "MIT"
keywords = ["fastapi", "torre", "insights", "skills"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: FastAPI"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
